# gimme_backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  build_log.txt  check_error.txt  check_output.txt  check_output_2.txt  init_schema.sql  output.txt
migration/: Cargo.toml
migration/src/: lib.rs  m20240129_000001_create_auth_tables.rs  m20240129_000002_create_delivery_table.rs
src/: config.rs  db.rs  error.rs  lib.rs  main.rs
src/bootstrap/: database.rs  mod.rs  repositories.rs  services.rs
src/entities/: user.rs
src/handlers/: user.rs
src/modules/: mod.rs
src/modules/auth/: extractors.rs  handlers.rs  mod.rs  registry.rs  router.rs  service.rs
src/modules/auth/providers/: email.rs  kakao.rs  mod.rs
src/modules/delivery/: mod.rs  repository.rs
src/modules/delivery/entities/: delivery_data.rs  mod.rs
src/modules/delivery/infra/: persistence.rs
src/modules/place/domain/: place.rs
src/modules/place/entities/: mod.rs  place_parent.rs
src/modules/users/: dtos.rs  handlers.rs  mod.rs  repository.rs  router.rs  service.rs  utils.rs
src/modules/users/entities/: enums.rs  mod.rs  social.rs  user.rs  verification.rs
src/modules/users/infra/: persistence.rs
src/routers/: mod.rs
src/shared/: config.rs  db.rs  error.rs  handlers.rs  middleware.rs  mod.rs  repository.rs  state.rs
src/shared/infra/: repository.rs
templates/auth/: move.html
templates/error/: 404.html  500.html
