[package]
name = "gimme_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "mock"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "fast-rng"] }
async-trait = "0.1.89"
jsonwebtoken = { version = "10.2.0", features = ["use_pem", "rust_crypto"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sha2 = "0.10.9"
rand = "0.9.2"
