[package]
name = "gimme_backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "2.0.0-rc", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "mock"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors", "catch-panic"] }
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.20.0", features = ["v4", "fast-rng"] }
async-trait = "0.1.89"
jsonwebtoken = { version = "10.2.0", features = ["use_pem", "rust_crypto"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sha2 = "0.10.9"
rand = "0.9.2"
lettre = { version = "0.11", default-features = false, features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder"] }
redis = { version = "1.0.2", features = ["tokio-comp"] }
deadpool-redis = "0.22.1"
askama = { version = "0.15", default-features = false, features = ["std", "derive"] }
migration = { path = "migration" }